[package]
name = "yomu"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.1"
color-eyre = "0.6.3"
crossterm = "0.29.0"
zip = "8.6.0"
clap = {version = "4.6.1", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
